updated CSS with relative path

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
       content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="https://use.typekit.net/qgt7mwx.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/juniper.css">
+    <link rel="stylesheet" type="text/css" href="{{"/assets/css/juniper.css" | relative_url}}">
     <script type="text/javascript" src="/assets/js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="/assets/js/main.js"></script>
   </head>
